<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_margin="10dp"
            android:layout_height="90dp" />

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/id"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/first_name"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/last_name"
                android:textSize="21sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/moreInfo"
            android:onClick="MoreInfoPatient"
            android:layout_margin="10dp"
            android:layout_width="80dp"
            android:layout_height="90dp" />

    </LinearLayout>
